--- a/src/main/resources/templates/member/memberForm.html
+++ b/src/main/resources/templates/member/memberForm.html
@@ -23,7 +23,7 @@
         .sign-form {
             /* border: 3px solid red; */
             border-radius: 5px;
-            height: 550px;
+            height: 800px;
             width: 500px;
             background-color: #eeeff1;
             padding: 50px;
@@ -43,7 +43,38 @@
 
 <!-- 사용자 스크립트 추가 -->
 <th:block layout:fragment="script">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script type="text/javascript">
+    function sendNumber(){
+        $("#mail_number").css("display","block");
+        $.ajax({
+            url:"/mail",
+            type:"post",
+            crossDomain: true,
+            headers: {  'Access-Control-Allow-Origin': 'http://The web site allowed to access' },
+            dataType:"json",
+            data:{"mail" : $("#mail").val()},
+            success: function(data){
+                alert("인증번호 발송");
+                $("#Confirm").attr("value",data);
+            },
+            error:function(request, status, error){
+		        alert("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
+	        }
+        });
+    }
 
+    function confirmNumber(){
+        var number1 = $("#number").val();
+        var number2 = $("#Confirm").val();
+
+        if(number1 == number2){
+            alert("인증되었습니다.");
+        }else{
+            alert("번호가 다릅니다.");
+        }
+    }
+</script>
     <script th:inline="javascript">
         $(document).ready(function(){
             var errorMessage = [[${errorMessage}]];
@@ -94,53 +125,63 @@
             }
          }).open();
      }
-
     </script>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 </th:block>
 
 <div layout:fragment="content">
-
     <form role="form" method="post" th:object="${memberFormDto}">
-      <br></br>
-      <h1 class="title">회원가입</h1>
-      <div class="sign-form">
-        <div class="form-group">
-            <label th:for="name">이름</label>
-            <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력하세요" style="width:250px;">
-            <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="fieldError">Incorrect data</p>
-        </div>
-        <div class="form-group">
-            <label th:for="email">이메일</label>
-            <input type="email" th:field="*{email}" class="form-control" placeholder="이메일을 입력하세요" style="width:250px;">
-            <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">Incorrect data</p>
-        </div>
-        <div class="form-group">
-            <label th:for="password">비밀번호</label>
-            <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호 입력" style="width:250px;">
-            <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect data</p>
-        </div>
-        <div class="form-group">
-            <label th:for="zipcode">우편번호</label>
-            <input type="text" name="addr1" id="addr1" th:field="*{zipcode}" class="form-control" placeholder="우편번호를 입력하세요" style="width:200px;" readonly>
-            <input type="button" onclick="execPostCode()" style="float:right; margin-right:50px; margin-top: -35px" value="우편번호 찾기"><br>
-        </div>
-        <div class="form-group">
-            <input type="text" name="addr2" id="addr2" th:field="*{streetadr}" class="form-control" style="margin-top: -30px" placeholder="도로명 주소를 입력하세요" readonly>
-        </div>
-        <div class="form-group">
-            <label th:for="detailAdr">상세 주소</label>
-            <input type="text" class="form-control" name="addr3" id="addr3" th:field="*{detailadr}" placeholder="상세 주소를 입력하세요">
-        </div>
-
+      <body>
         <br></br>
-        <div style="text-align: center">
-            <button type="submit" class="btn btn-primary" style="">가입</button>
+        <h1 class="title">회원가입</h1>
+        <div class="sign-form">
+            <div class="form-group">
+                <label th:for="name">이름</label>
+                <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력하세요" style="width:250px;">
+                <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="fieldError">Incorrect data</p>
+            </div>
+            <div class="form-group">
+                <label th:for="email">이메일</label>
+                <input type="email" th:field="*{email}" name="mail" id="mail" class="form-control" placeholder="이메일을 입력하세요" style="width:250px;">
+                <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">Incorrect data</p>
+            </div>
+            <div class="form-group">
+                <button type="button" id="sendBtn" name="sendBtn" onclick="sendNumber()">인증번호</button>
+            </div>
+                <br>
+            <div id="mail_number" name="mail_number" style="display: none">
+                <input type="text" name="number" id="number" style="width:250px; margin-top: -10px" placeholder="인증번호 입력">
+                <button type="button" name="confirmBtn" id="confirmBtn" onclick="confirmNumber()">이메일 인증</button>
+                <br>
+                <input type="text" id="Confirm" name="Confirm" style="display: none" value="">
+            </div>
+            <div class="form-group">
+                <label th:for="password" style="margin-top: 10px">비밀번호</label>
+                <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호 입력" style="width:250px;">
+                <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect data</p>
+            </div>
+            <div class="form-group">
+                <label th:for="zipcode">우편번호</label>
+                <input type="text" name="addr1" id="addr1" th:field="*{zipcode}" class="form-control" placeholder="우편번호를 입력하세요" style="width:200px;" readonly>
+                <input type="button" onclick="execPostCode()" style="float:right; margin-right:50px; margin-top: -35px" value="우편번호 찾기"><br>
+            </div>
+            <div class="form-group">
+                <input type="text" name="addr2" id="addr2" th:field="*{streetadr}" class="form-control" style="margin-top: -30px" placeholder="도로명 주소를 입력하세요" readonly>
+            </div>
+            <div class="form-group">
+                <label th:for="detailAdr">상세 주소</label>
+                <input type="text" class="form-control" name="addr3" id="addr3" th:field="*{detailadr}" placeholder="상세 주소를 입력하세요">
+            </div>
+
+            <br></br>
+            <div style="text-align: center">
+                <button type="submit" class="btn btn-primary" style="">가입</button>
+            </div>
+            <div>
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+            </div>
         </div>
-        <div>
-            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-        </div>
-      </div>
+      </body>
     </form>
 
 </div>
