--- a/src/main/resources/templates/member/memberForm.html
+++ b/src/main/resources/templates/member/memberForm.html
@@ -9,7 +9,6 @@
         .fieldError {
             color: #bd2130;
         }
-
         .title {
             top: 50%;
             bottom: 50%
@@ -45,6 +44,8 @@
 <th:block layout:fragment="script">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/javascript">
+    var isCertification = false;
+
     function sendNumber(){
         $("#mail_number").css("display","block");
         $.ajax({
@@ -57,6 +58,7 @@
             success: function(data){
                 alert("인증번호 발송");
                 $("#Confirm").attr("value",data);
+                isCertification=false;
             },
             error:function(request, status, error){
 		        alert("code:"+request.status+"\n"+"message:"+request.responseText+"\n"+"error:"+error);
@@ -67,13 +69,30 @@
     function confirmNumber(){
         var number1 = $("#number").val();
         var number2 = $("#Confirm").val();
+        const $resultMsg = $('#mail-check-warn');
 
-        if(number1 == number2){
-            alert("인증되었습니다.");
+        if(number1 === undefined || number1 === null || number1 === '') {
+            alert("인증 번호를 입력해주세요!")
+        }
+        if(number1 == number2 && number1 !== null && number1 !== ''){
+            $resultMsg.html('인증 성공');
+			$resultMsg.css('color','green');
+            isCertification = true;
         }else{
-            alert("번호가 다릅니다.");
+            $resultMsg.html('인증번호 불일치');
+            $resultMsg.css('color','red');
+            isCertification = false;
         }
     }
+
+    function submitCheck() {
+        if(isCertification == false) {
+            alert("메일 인증을 진행해야합니다!");
+            return false;
+        } else
+            true;
+    };
+
 </script>
     <script th:inline="javascript">
         $(document).ready(function(){
@@ -130,7 +149,7 @@
 </th:block>
 
 <div layout:fragment="content">
-    <form role="form" method="post" th:object="${memberFormDto}">
+    <form role="form" method="post" th:object="${memberFormDto}" onsubmit="return submitCheck();">
       <body>
         <br></br>
         <h1 class="title">회원가입</h1>
@@ -146,11 +165,12 @@
                 <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">Incorrect data</p>
             </div>
             <div class="form-group">
-                <button type="button" id="sendBtn" name="sendBtn" onclick="sendNumber()">인증번호</button>
+                <button type="button" id="sendBtn" name="sendBtn" onclick="sendNumber()">인증번호 전송</button>
             </div>
                 <br>
-            <div id="mail_number" name="mail_number" style="display: none">
+            <div id="mail_number" name="mail_number">
                 <input type="text" name="number" id="number" style="width:250px; margin-top: -10px" placeholder="인증번호 입력">
+                <span id="mail-check-warn"></span>
                 <button type="button" name="confirmBtn" id="confirmBtn" onclick="confirmNumber()">이메일 인증</button>
                 <br>
                 <input type="text" id="Confirm" name="Confirm" style="display: none" value="">
@@ -163,7 +183,8 @@
             <div class="form-group">
                 <label th:for="zipcode">우편번호</label>
                 <input type="text" name="addr1" id="addr1" th:field="*{zipcode}" class="form-control" placeholder="우편번호를 입력하세요" style="width:200px;" readonly>
-                <input type="button" onclick="execPostCode()" style="float:right; margin-right:50px; margin-top: -35px" value="우편번호 찾기"><br>
+                <p th:if="${#fields.hasErrors('zipcode')}" th:errors="*{zipcode}" class="fieldError">Incorrect data</p>
+                <input type="button" onclick="execPostCode()" style="float:right; margin-right:10px; margin-top: -35px" value="우편번호 찾기"><br>
             </div>
             <div class="form-group">
                 <input type="text" name="addr2" id="addr2" th:field="*{streetadr}" class="form-control" style="margin-top: -30px" placeholder="도로명 주소를 입력하세요" readonly>
@@ -172,10 +193,9 @@
                 <label th:for="detailAdr">상세 주소</label>
                 <input type="text" class="form-control" name="addr3" id="addr3" th:field="*{detailadr}" placeholder="상세 주소를 입력하세요">
             </div>
-
             <br></br>
             <div style="text-align: center">
-                <button type="submit" class="btn btn-primary" style="">가입</button>
+                <button type="submit" class="btn btn-primary" id="submit" style="">가입</button>
             </div>
             <div>
                 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
