--- a/src/main/resources/templates/member/memberForm.html
+++ b/src/main/resources/templates/member/memberForm.html
@@ -2,7 +2,16 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout1}">
-
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script
+            src="https://code.jquery.com/jquery-3.4.1.js"
+            integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+            crossorigin="anonymous"></script>
+    <title>회원가입</title>
+</head>
 <!-- 사용자 CSS 추가 -->
 <th:block layout:fragment="css">
     <style>
@@ -22,7 +31,7 @@
         .sign-form {
             /* border: 3px solid red; */
             border-radius: 5px;
-            height: 800px;
+            height: 900px;
             width: 500px;
             background-color: #eeeff1;
             padding: 50px;
@@ -37,12 +46,23 @@
             border : none;
             width : 100%;
         }
+        .final_pwck_ck{
+            display: none;
+        }
+        .pwck_input_re_1{
+            color : green;
+            display : none;
+        }
+        .pwck_input_re_2{
+            color : red;
+            display : none;
+        }
     </style>
 </th:block>
 
 <!-- 사용자 스크립트 추가 -->
 <th:block layout:fragment="script">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript">
     var isCertification = false;
 
@@ -84,23 +104,27 @@
             isCertification = false;
         }
     }
-
-    function submitCheck() {
-        if(isCertification == false) {
-            alert("메일 인증을 진행해야합니다!");
-            return false;
-        } else
-            true;
-    };
-
 </script>
     <script th:inline="javascript">
-        $(document).ready(function(){
+       $(document).ready(function(){
             var errorMessage = [[${errorMessage}]];
             if(errorMessage != null){
                 alert(errorMessage);
             }
         });
+
+    function submitCheck() {
+        if(isCertification == false) {
+            alert("메일 인증을 진행해야합니다!");
+            return false;
+        }
+        if(pwckcorCheck == false) {
+            alert("비밀번호를 재입력해주세요!");
+            return false;
+        } else {
+            return true;
+        }
+    };
 
         function execPostCode() {
          new daum.Postcode({
@@ -144,13 +168,37 @@
             }
          }).open();
      }
+
     </script>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript">
+         var pwCheck = false;
+         var pwckcorCheck = false;
+
+         $(document).on("propertychange change keyup paste input", '#passwordConfirm', function(){
+            var pw = $('#password').val();
+            var pwck = $('#passwordConfirm').val();
+            $('#final_pwck_ck').css('display', 'none');
+
+            if(pw == pwck){
+             $('#pwck_input_re_1').css('display','block');
+             $('#pwck_input_re_2').css('display','none');
+             pwckcorCheck = true;
+            }else{
+             $('#pwck_input_re_1').css('display','none');
+             $('#pwck_input_re_2').css('display','block');
+            pwckcorCheck = false;
+            }
+      });
+
+    </script>
 </th:block>
 
 <div layout:fragment="content">
     <form role="form" method="post" th:object="${memberFormDto}" onsubmit="return submitCheck();">
       <body>
+
         <br></br>
         <h1 class="title">회원가입</h1>
         <div class="sign-form">
@@ -169,9 +217,9 @@
             </div>
                 <br>
             <div class="form-group" id="mail_number" name="mail_number">
-                <input type="text" name="number" id="number" style="width:250px; margin-top: -10px" placeholder="인증번호 입력">
+                <input type="text" name="number" id="number" class="form-control" style="width:250px; margin-top: -10px" placeholder="인증번호 입력">
                 <span id="mail-check-warn"></span>
-                <button type="button" name="confirmBtn" id="confirmBtn" onclick="confirmNumber()">이메일 인증</button>
+                <button type="button" name="confirmBtn" id="confirmBtn" style="margin-top: 20px" onclick="confirmNumber()">이메일 인증</button>
                 <br>
                 <input type="text" id="Confirm" name="Confirm" style="display: none" value="">
             </div>
@@ -180,6 +228,13 @@
                 <input type="password" th:field="*{password}" id="password" class="form-control" placeholder="비밀번호 입력" style="width:250px;">
                 <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="fieldError">Incorrect data</p>
             </div>
+            <div class="form-group">
+                <input type="password" id="passwordConfirm" class="form-control" placeholder="비밀번호 재입력" style="width:250px;">
+                <span class="final_pwck_ck">비밀번호 확인을 입력해주세요.</span>
+                <span class="pwck_input_re_1" id="pwck_input_re_1">비밀번호 일치</span>
+                <span class="pwck_input_re_2" id="pwck_input_re_2">비밀번호 불일치</span>
+            </div>
+            <span id="confirmMsg"></span>
             <div class="form-group">
                 <label th:for="zipcode">우편번호</label>
                 <input type="text" name="addr1" id="addr1" th:field="*{zipcode}" class="form-control" placeholder="우편번호를 입력하세요" style="width:200px;" readonly>
@@ -201,7 +256,9 @@
                 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
             </div>
         </div>
+
       </body>
+
     </form>
 
 </div>
