--- a/src/main/resources/templates/member/findMemberForm.html
+++ b/src/main/resources/templates/member/findMemberForm.html
@@ -5,7 +5,7 @@
 
 <!-- 사용자 CSS 추가 -->
 <th:block layout:fragment="css">
-    <style>
+  <style>
         .error {
             color: #bd2130;
         }
@@ -17,13 +17,13 @@
         }
         body {
             margin: 0
-
+            background-image:url('https://img.freepik.com/free-vector/cute-pattern-with-dog-faces-and-bones_1191-1204.jpg?w=740&t=st=1674197547~exp=1674198147~hmac=a89a865d8c4ad9396fe70275339fb4b7f8aaa2a69e68d3c79cf4d1f2212a84e5')
         }
         .login-form{
             /* border: 3px solid red; */
             border-radius: 5px;
-            height: 600px;
-            width: 400px;
+            height: 350px;
+            width: 600px;
             background-color: #eeeff1;
             padding: 50px;
             margin : 80px auto;
@@ -32,7 +32,7 @@
             position: absolute;
             left: 0;
             right: 0;
-            top: 68%;
+            top: 60%;
         }
         .button {
           border: none;
@@ -98,34 +98,60 @@
 </style>
 </th:block>
 
+<!-- 사용자 스크립트 추가 -->
+<th:block layout:fragment="script">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script type="text/javascript">
+
+    $(document).on('click', '#checkEmail', function() {
+      const email = $("#email").val();
+
+		if (email == "" || email == null || email == undefined) {
+			alert("이메일을 입력해 주세요!")
+			return false;
+		}
+		const sendEmail = document.forms["sendEmail"];
+		$.ajax({
+			url : "/members/findId",
+			type : "post",
+			data : { 'memberEmail': email },
+			dataType : "text",
+			success : function(result) {
+			    console.log(result)
+				if (result === 'null') {
+				    alert('가입되지 않은 이메일입니다!');
+				} else {
+					alert('임시비밀번호를 전송 했습니다.');
+					sendEmail.submit();
+				}
+			},
+			error : function(xhr) {
+				alert("에러코드 = " + xhr.status);
+			}
+		});
+	});
+  </script>
+</th:block>
+
 <div id="container" layout:fragment="content">
-    <body>
-    <form role="form" method="post" action="/members/login">
-        <br></br>
-        <h1 class="title">로그인</h1>
-        <div class="login-form">
-            <div class="form-group">
-                <label th:for="email">이메일주소</label>
-                <input type="email" name="email" class="form-control" placeholder="이메일을 입력해주세요" style="width:250px;">
-            </div>
-            <div class="form-group">
-                <label th:for="password">비밀번호</label>
-                <input type="password" name="password" id="password" class="form-control" placeholder="비밀번호 입력" style="width:250px;">
-            </div>
-            <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
-        <div class="button_container">
-            <button type="submit" class="button" style="margin-top:20px">&nbsp;&nbsp;&nbsp;&nbsp;로그인&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button>
-            <br>
-            <button type="button" class="button" onClick="location.href='/members/new'">&nbsp;&nbsp;&nbsp;&nbsp;회원가입&nbsp;&nbsp;&nbsp;</button>
-            <br>
-            <button type="button" class="button" onClick="location.href='/members/newAdmin'">관리자 회원가입</button>
-            <br>
-        </div>
-            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-        </div>
-    </form>
-        <a href="#" onclick="location.href='/members/findMember'" class="forget" style="color:red; text-align:center">Oops! 비밀번호를 잊어버리셨나요?</a>
-    </body>
+  <body>
+  <form role="form" class="text-start" method="post" name="sendEmail" action="/members/sendEmail">
+    <br></br>
+    <h1 class="title">비밀번호 찾기</h1>
+    <div class="login-form">
+      <div class="form-group">
+        <input type="email" id="email" name="memberEmail" class="form-control" placeholder="회원가입시 입력했던 이메일을 입력하세요." style="width:400px; margin-left:50px; margin-top:40px;" required>
+        <p style="margin-left:80px; margin-top:20px;">입력한 이메일로 임시 비밀번호가 전송됩니다!</p>
+      </div>
+      <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
+      <div class="button_container">
+        <button type="button" id="checkEmail" class="button" style="margin-top:20px">&nbsp;&nbsp;비밀번호 발송&nbsp;&nbsp;</button>
+        <br>
+      </div>
+      <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+    </div>
+  </form>
+  </body>
 </div>
 
 </html>
