--- a/src/main/resources/templates/mypage/formMemberMyInfo.html
+++ b/src/main/resources/templates/mypage/formMemberMyInfo.html
@@ -57,11 +57,11 @@
       <div class="sign-form">
         <div class="form-group">
             <label th:for="email">이메일</label>
-            <input type="text" th:value="${member.email}" id="email" class="form-control" style="width:250px;" disabled>
+            <input type="text" th:value="${member.email}" id="email" class="form-control" style="width:250px;" readonly>
         </div>
         <div class="form-group">
             <label th:for="password">비밀번호</label>
-            <input type="password" th:value="${member.originalpassword}" id="password" class="form-control" style="width:250px;" disabled>
+            <input type="password" th:value="${member.originalpassword}" id="password" class="form-control" style="width:250px;" readonly>
         </div>
         <div class="form-group">
             <label th:for="name">이름</label>
