--- a/src/main/resources/templates/settings/memberUpdateForm.html
+++ b/src/main/resources/templates/settings/memberUpdateForm.html
@@ -22,7 +22,7 @@
         .sign-form {
             /* border: 3px solid red; */
             border-radius: 5px;
-            height: 800px;
+            height: 900px;
             width: 500px;
             background-color: #eeeff1;
             padding: 50px;
@@ -36,6 +36,17 @@
             background-color: #1bbc9b;
             border : none;
             width : 100%;
+        }
+        .final_pwck_ck{
+            display: none;
+        }
+        .pwck_input_re_1{
+            color : green;
+            display : none;
+        }
+        .pwck_input_re_2{
+            color : red;
+            display : none;
         }
     </style>
 </th:block>
@@ -86,9 +97,45 @@
         }
       }).open();
     }
+
+    $(document).ready(function(){
+        $("#changePassword").click(function(){
+          $('#password').prop('readonly', false);
+          $('#passwordConfirm').prop('readonly', false);
+        });
+    });
+
+    function submitCheck() {
+        if(pwckcorCheck == false) {
+            alert("비밀번호를 재입력해주세요!");
+            return false;
+        } else {
+            return true;
+        }
+    };
    </script>
    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+   <script th:inline="javascript">
+        var pwCheck = false;
+        var pwckcorCheck = false;
+
+         $(document).on("propertychange change keyup paste input", '#passwordConfirm', function(){
+            var pw = $('#password').val();
+            var pwck = $('#passwordConfirm').val();
+            $('#final_pwck_ck').css('display', 'none');
+
+            if(pw == pwck){
+             $('#pwck_input_re_1').css('display','block');
+             $('#pwck_input_re_2').css('display','none');
+             pwckcorCheck = true;
+            }else{
+             $('#pwck_input_re_1').css('display','none');
+             $('#pwck_input_re_2').css('display','block');
+            pwckcorCheck = false;
+            }
+      });
+   </script>
 </th:block>
 
 <head>
@@ -96,7 +143,7 @@
 </head>
 
 <div layout:fragment="content">
-    <form method="post" role="form" th:object="${memberUpdateDto}">
+    <form method="post" role="form" th:object="${memberUpdateDto}" onsubmit="return submitCheck();">
         <br></br>
         <h1 class="title" style="margin-top:40px">회원정보 변경</h1>
         <input type="hidden" th:value="${member.id}" id="id">
@@ -107,9 +154,18 @@
             </div>
             <div class="form-group">
                 <label th:for="password">비밀번호</label>
-                <input type="password" th:value="${member.originalpassword}" id="password" class="form-control" style="width:250px;" readonly>
+                <input type="text" name="password" th:value="${member.originalpassword}" id="password" class="form-control" style="width:250px;" readonly>
             </div>
-            <button type="button" class="btn btn-outline-primary btn-sm" onclick="location='/member/update/password'">비밀번호 변경</button>
+            <div class="form-group">
+                <input type="password" id="passwordConfirm" class="form-control" placeholder="비밀번호 재입력" style="width:250px;" readonly>
+                <span class="final_pwck_ck">비밀번호 확인을 입력해주세요.</span>
+                <span class="pwck_input_re_1" id="pwck_input_re_1">비밀번호 일치</span>
+                <span class="pwck_input_re_2" id="pwck_input_re_2">비밀번호 불일치</span>
+            </div>
+            <span id="confirmMsg"></span>
+            <button type="button" id="changePassword" class="btn btn-outline-primary btn-sm">비밀번호 변경</button>
+            <br>
+            <br>
             <div class="form-group">
                 <label th:for="name">이름</label>
                 <input type="text" name="name" th:value="${member.name}" id="name" class="form-control" style="width:250px;">
@@ -127,7 +183,7 @@
             </div>
             <br>
             <div class="form-group">
-                <input type="text" name="streetadr" id="addr2" th:value="${member.streetaddress}" class="form-control" style="margin-top: -30px" readonly>
+                <input type="text" name="streetadr" id="addr2" th:value="${member.streetaddress}" class="form-control" style="margin-top: -50px" readonly>
             </div>
             <div class="form-group">
                 <label th:for="detailAdr">상세 주소</label>
@@ -138,7 +194,6 @@
                 <button type="button" onclick="location.href='/'">홈으로</button>
                 <button type="submit">회원 정보 수정</button>
             </div>
-
             <br></br>
             <div>
                 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
